♻️ only apply :hover/:active styles when hover is supported and pointer is fine (this prevents the need to double tap to submit forms and click links on iOS)

--- a/src/base/02_baseline.css
+++ b/src/base/02_baseline.css
@@ -101,9 +101,16 @@ body {
     color: var(--link-color--visited);
   }
 
-  &:where(:hover, :active, :focus-visible) {
+  &:where(:focus-visible) {
     color: var(--link-color--hover);
     text-decoration: var(--link-decoration--hover);
+  }
+
+  @media (pointer: fine) and (hover: hover) {
+    &:where(:hover, :active) {
+      color: var(--link-color--hover);
+      text-decoration: var(--link-decoration--hover);
+    }
   }
 
   * {
